--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
+    "react-countdown": "^2.3.6",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.1"
   },
